# web-hw-6-final

./: create_tables.sql  hw06.sqlite  hw_sql.sql  main.py  pyproject.toml
